--- a/templates/node--byu-faculty-member.html.twig
+++ b/templates/node--byu-faculty-member.html.twig
@@ -17,7 +17,7 @@
 
 {{ attach_library('byu_faculty_directory/component-1.x.x') }}
 
-<byu-faculty-profile background-image="https://github.com/byuweb/byu-faculty-directory/blob/master/test_image_5.jpg?raw=true" faculty-image="{{ file_url(node.field_profile_image.entity.uri.value) }}">
+<byu-faculty-profile background-image="{{ profile_background_image }}" faculty-image="{{ file_url(node.field_profile_image.entity.uri.value) }}">
     <div slot="faculty-name">{{ node.field_first_name.value ~ " " ~ node.field_last_name.value }}</div>
     <span slot="faculty-title">{{ node.field_title.value }}</span>
     <span slot="faculty-office">{{ node.field_office_location.value }}</span>
